[project]
name = "findmydad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "findmy",
    "pycryptodome",
    "requests",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff",
    "dotenv",
]
