[project]
name = "findmydad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=42.0.0",
    "duckdb>=1.3.0",
    "findmy",
    "requests",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff",
    "dotenv",
]

[build-system]
requires = ["pdm-backend>=1.0.0"]
build-backend = "pdm.backend"
